<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/app_list_linear_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
...
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"/>

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/app_list_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="6dp"/>

    </LinearLayout>
...
