<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_create_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primaryBackground">

    <TextView
...
        android:text="@string/create_profile"
        android:textSize="28sp"
        android:layout_margin="12dp"
        android:textColor="@color/primaryDarkColor"/>

    <EditText
        android:id="@+id/profile_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:hint="@string/profile_name"
        android:inputType="text"
        android:maxLines="1"
...
