...
            android:layout_margin="6dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:visibility="gone"/>

        <ImageButton
            android:id="@+id/profile_list_edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="16dp"
            android:background="#00000000"
            android:rotation="180"
...
