...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/schedule_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:hint="@string/schedule_name_edit_text_hint"
        android:layout_margin="12dp"/>

...
            android:layout_marginStart="12dp"
            android:text="@string/schedule_repeats_weekly"
            android:layout_weight="1"
            android:visibility="gone"/>

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/schedule_repeat_weekly_radio"
            android:layout_gravity="end"
            android:layout_marginEnd="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

...
